# RaceGame

./: .gitignore  CMakeLists.txt
RaceLibrary/: CMakeLists.txt
RaceLibrary/inc/: factories.h
RaceLibrary/inc/exceptions/: competitors_number_exception.h  distance_exception.h  distance_value_exception.h  registration_exception.h  simulator_exception.h
RaceLibrary/inc/races/: air_race.h  ground_race.h  race.h  races_factory.h
RaceLibrary/inc/vehicles/: air_vehicle.h  all_terrain_boots.h  broom.h  camel.h  centaur.h  eagle.h  ground_vehicle.h  magic_carpet.h  racing_camel.h  vehicle.h  vehicles_factory.h  vehicles_models.h
RaceLibrary/src/: factories.cpp
RaceLibrary/src/races/: air_race.cpp  ground_race.cpp  race.cpp  races_factory.cpp
RaceLibrary/src/vehicles/: air_vehicle.cpp  all_terrain_boots.cpp  broom.cpp  camel.cpp  centaur.cpp  eagle.cpp  ground_vehicle.cpp  magic_carpet.cpp  racing_camel.cpp  vehicle.cpp  vehicles_factory.cpp  vehicles_models.cpp
inc/: race_simulator.h
src/: main.cpp  race_simulator.cpp
